April 10, 2007
------------------
[Fredrik Jonsson]
vote_storylink.module:
- Added a better error message when a duplicate url is submitted.
- Minor coding style fixes.

April 3, 2007
------------------
[Fredrik Jonsson]
vote_up_down.module:
- Anonymous voting support
- Users don't get points for voting on there own comments.
- Added users/uid/votes that lists all the nodes a user has voted on.
- Fixed the description for RSS feeds.
- Minor coding style fixes.

November 3, 2006
------------------
[Fredrik Jonsson]
- Start updating to Drupal 5.

September 15, 2006
------------------
[Fredrik Jonsson]
vote_storylink.module:
- Minor bug fixes.
vote_up_down.module:
- User now don't get Userpoints when voting on there own content.
- Fixed Vote points display setting "Full page view" bug.
- "Reset vote" now set the vote to = instead of removing it. 
  Seems to fix the voting action error.
- Minor bug fixes.

August 2, 2006
------------------
[Fredrik Jonsson]
vote_storylink.module:
- Integrated the code from user_navigation.module in to vote_storylink.module.
- Now check for duplicated url:s on validation.
- Added a storylink/queue page.
vote_up_down.module:
- Integrated with the Userpoints module
- Adds two userpoints actions in vote_up_down_actions.inc.
- Add a "Alternative +1 vote style" (digg style) voting widget.
- Redesigned the settings.
- Add a "reset vote" link with setting to turn on and off.

April 14, 2006
------------------
[Fredrik Jonsson]
vote_storylink.module:
- Added top page for this day including RSS feeds and a block with links.
vote_up_down.module:
- Removed depreciated call to tablesort_pager().

April 4, 2006
------------------
[Fredrik Jonsson]
- This CHANGELOG.txt file added to track changes
vote_storylink.module:
- Fixed title for RSS feeds
- Added top pages for this week/month/year including RSS feeds and a block with links.
vote_up_down.module:
- Added voting to comments. Nothing happens to comments yet, they just get points.