@@ -1,6 +1,7 @@
+/* $Id$ */
 
 <!-- start node -->
-<div id="node-<?php print $node->nid; ?>" class="node storylink clear-block<?php print ($sticky) ? ' sticky' : ''; print (!$status) ? ' node-unpublished' : ''; ?>">
+<div id="node-<?php print $node->nid; ?>" class="node storylink clear-block<?php print($sticky) ? ' sticky' : ''; print(!$status) ? ' node-unpublished' : ''; ?>">
 <?php print $picture ?>
 <h2 class="title"><a href="<?php print $node_url ?>"><?php print $title ?></a></h2>
 <?php print $vote_storylink_via ?>
