@@ -1,3 +1,4 @@
+/* $Id$  */
 .vote-up-down-widget {
   float: left;
   clear: left;
