@@ -1,7 +1,6 @@
 ; $Id$
 name = Vote up/down
-description = Adds a up/down vote widget to selected node types, part of Vote up/down.
+description = Adds a up/down voting widget to selected node types (Part of Vote up/down package)
 dependencies[] = votingapi
 package = Voting
-
 core = 6.x
