@@ -1,3 +1,14 @@
+September 30, 2008
+------------------
+[Pratul Kalia]
+almost all files:
+- Did the initial conversion to Drupal 6.x
+
+
+==================
+5.x CHANGELOG.txt
+==================
+
 April 10, 2007
 ------------------
 [Fredrik Jonsson]
